# pixl-ai

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  USAGE.md  pipeline-state.json  pyproject.toml
.agents/skills/: ROUTING.md  admin-dashboard  agent-browser  agent-development  api-audit  batch  benchmark  blog  cartographer  changelog  claude-md  client-project-setup  code-reduction  code-review  command-development  content-marketing  content-pipeline  context-packet-template  continuous-learning  crew-init  cto-review  ddd-pattern  dependency-review  design-extraction  docker-cloudrun  docker-prisma-setup  error-catalog  eval-harness  fastapi-api  fastapi-service  file-parser  fullstack-app  harness  hook-development  i18n-setup  intel  intro-video-brief  makefile  migration-plan  multi-agent-pipeline  (+37 more)
.claude/: .skill-invoked
.claude/memory/sessions/: 2026-03-16-04-36.md  2026-03-16-12-01.md  2026-03-16-12-11.md  2026-03-16-12-45.md  2026-03-16-12-48.md  2026-03-16-12-49.md  2026-03-16-13-01.md  2026-03-16-13-10.md  2026-03-16-13-12.md  2026-03-16-13-18.md  2026-03-16-13-53.md  2026-03-16-13-54.md  2026-03-16-14-09.md  2026-03-16-14-28.md  2026-03-16-14-31.md  2026-03-16-14-42.md  2026-03-16-14-53.md  2026-03-16-14-58.md  2026-03-16-15-00.md  2026-03-16-15-02.md  2026-03-16-16-12.md  2026-03-16-20-44.md  2026-03-16-20-47.md  2026-03-16-20-52.md  2026-03-17-00-10.md  2026-03-17-00-13.md  2026-03-17-00-30.md  2026-03-17-00-42.md  2026-03-17-00-46.md  2026-03-17-00-47.md  2026-03-17-20-41.md  2026-03-17-20-42.md  2026-03-17-20-47.md  2026-03-17-20-53.md  2026-03-17-21-01.md  2026-03-17-21-05.md  2026-03-17-21-08.md  2026-03-17-21-15.md  2026-03-17-21-27.md  2026-03-17-21-28.md  (+3 more)
.claude/rules/: agent-authoring.md  caveman-activate.md  coding-style.md  context-management.md  git-workflow.md  patterns.md  permissions.md  security.md  testing.md  workflow.md
.claude/rules/python/: coding-style.md  testing.md
.claude/rules/typescript/: coding-style.md
.codex/: config.toml  hooks.json
.codex/agents/: architect.toml  backend-engineer.toml  build-error-resolver.toml  devops-engineer.toml  doc-updater.toml  explorer.toml  frontend-engineer.toml  fullstack-engineer.toml  onboarding-agent.toml  orchestrator.toml  product-owner.toml  qa-engineer.toml  security-engineer.toml  tech-lead.toml
.codex/hooks/: _env.sh  pre-tool-use.sh  session-start.sh  stop.sh  user-prompt-submit.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE-ANALYSIS.md  CHANGELOG.md  project-workflow.md  scenario-prd-to-code.md  session-efficiency-report.md
scripts/: release.sh  verify-codex.sh
