[project]
name = "pixl"
version = "1.0.0"
description = "AI dev platform: orchestration engine + Claude Code crew plugin"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = ["pixl-engine", "pixl-cli"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.9"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/engine", "packages/cli"]

[tool.uv.sources]
pixl-engine = { workspace = true }
pixl-cli = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/engine/tests", "packages/cli/tests"]
markers = [
    "slow: marks tests as slow (ThreadPool, workflow execution)",
    "comprehensive: marks comprehensive test suites with artifact generation",
    "e2e: marks end-to-end integration tests",
    "edge_cases: marks edge case tests",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
