[project]
name = "pixl"
version = "11.3.0"
description = "AI dev platform: orchestration engine + Claude Code crew plugin"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = ["pixl-engine", "pixl-cli", "pixl-api"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.9", "pyright>=1.1", "pytest-cov>=5.0", "pre-commit>=4.0"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/engine", "packages/cli", "packages/api"]

[tool.uv.sources]
pixl-engine = { workspace = true }
pixl-cli = { workspace = true }
pixl-api = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/engine/tests", "packages/cli/tests", "packages/api/tests"]
markers = [
    "slow: marks tests as slow (ThreadPool, workflow execution)",
    "comprehensive: marks comprehensive test suites with artifact generation",
    "e2e: marks end-to-end integration tests",
    "edge_cases: marks edge case tests",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["packages/engine/pixl", "packages/cli/pixl_cli", "packages/api/pixl_api"]
reportMissingTypeStubs = false
reportMissingImports = "warning"
reportIncompatibleVariableOverride = false
reportIncompatibleMethodOverride = false

[tool.coverage.run]
source = ["packages/engine/pixl", "packages/cli/pixl_cli"]
omit = ["*/tests/*", "*/__init__.py", "*/py.typed"]

[tool.coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["packages/cli/pixl_cli/_crew"]  # build artifact — crew scripts copied by hatch hook

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
